# htmx-todo-rust

./: Cargo.toml
src/: lib.rs  main.rs
src/components/: add_todo_form.rs  base_layout.rs  mod.rs  todo.rs  todo_list.rs
src/models/: todo.rs
