[package]
name = "htmx-todo-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-core = "0.4.3"
http = "1.0.0"
leptos = { version = "0.5.7", features = ["ssr"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
